--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,6 +20,28 @@
         <bouncy.castle.version>1.80</bouncy.castle.version>
     </properties>
 
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>https://github.com/neuw/aws-iam-roles-anywhere/blob/main/LICENSE</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/neuw/aws-iam-roles-anywhere.git</connection>
+        <developerConnection>scm:git:ssh://github.com:neuw/aws-iam-roles-anywhere.git</developerConnection>
+        <url>http://github.com/neuw/aws-iam-roles-anywhere/tree/master</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Karanbir Singh</name>
+            <email>krnbr@live.in</email>
+            <organization>Neuw</organization>
+            <organizationUrl>https://www.linkedin.com/in/krnbr/</organizationUrl>
+        </developer>
+    </developers>
+
     <dependencies>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
