--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -12,6 +12,29 @@
     <name>${project.groupId}:${project.artifactId}</name>
     <description>AWS IAM roles anywhere credential provider spring boot starter library</description>
     <url>https://github.com/neuw/aws-iam-roles-anywhere</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>https://github.com/neuw/aws-iam-roles-anywhere/blob/main/LICENSE</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git://github.com/neuw/aws-iam-roles-anywhere.git</connection>
+        <developerConnection>scm:git:ssh://github.com:neuw/aws-iam-roles-anywhere.git</developerConnection>
+        <url>http://github.com/neuw/aws-iam-roles-anywhere/tree/master</url>
+    </scm>
+
+    <developers>
+        <developer>
+            <name>Karanbir Singh</name>
+            <email>krnbr@live.in</email>
+            <organization>Neuw</organization>
+            <organizationUrl>https://www.linkedin.com/in/krnbr/</organizationUrl>
+        </developer>
+    </developers>
+
     <properties>
         <java.version>17</java.version>
     </properties>
