--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,10 @@
 
   <groupId>in.neuw</groupId>
   <artifactId>aws-iam-roles-anywhere</artifactId>
-  <version>0.4</version>
+  <version>0.4-sb-3.4.3-aws-2.31.8</version>
   <packaging>pom</packaging>
+
+  <!-- 0.4-sb-3.4.3-aws-2.31.8 -->
 
   <name>${project.groupId}:${project.artifactId}</name>
   <description>AWS IAM roles anywhere credential provider library for Java</description>
@@ -182,7 +184,7 @@
         <extensions>true</extensions>
         <configuration>
           <autoPublish>true</autoPublish>
-          <deploymentName>deploy-24th-may-2025-${project.version}-1</deploymentName>
+          <deploymentName>deploy-26th-may-2025-${project.version}-1</deploymentName>
           <publishingServerId>central</publishingServerId>
           <skipPublishing>false</skipPublishing>
           <waitUntil>validated</waitUntil>
