--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>in.neuw</groupId>
         <artifactId>aws-iam-roles-anywhere</artifactId>
-        <version>0.4-sb-3.4.6-aws-2.31.48</version>
+        <version>0.4-2.31.50</version>
     </parent>
 
     <artifactId>tests</artifactId>
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>in.neuw</groupId>
             <artifactId>aws-iam-roles-anywhere-starter</artifactId>
+            <version>${artifact.number}-${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
