--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>in.neuw</groupId>
         <artifactId>aws-iam-roles-anywhere</artifactId>
-        <version>0.4-2.31.50</version>
+        <version>0.4.5</version>
     </parent>
 
     <artifactId>aws-iam-roles-anywhere-core</artifactId>
