--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -5,12 +5,11 @@
     <parent>
         <groupId>in.neuw</groupId>
         <artifactId>aws-iam-roles-anywhere</artifactId>
-        <version>0.4-2.31.50</version>
+        <version>0.4.5</version>
     </parent>
     <artifactId>aws-iam-roles-anywhere-starter</artifactId>
     <packaging>jar</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
-    <version>0.4-${spring-boot.version}</version>
     <description>AWS IAM roles anywhere credential provider spring boot starter library</description>
     <url>https://github.com/neuw/aws-iam-roles-anywhere</url>
 
@@ -43,7 +42,6 @@
         <dependency>
             <groupId>in.neuw</groupId>
             <artifactId>aws-iam-roles-anywhere-core</artifactId>
-            <version>0.4-2.31.50</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
