--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>17</java.version>
+        <java.version>8</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <bouncy.castle.version>1.81</bouncy.castle.version>
     </properties>
 
