--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -8,9 +8,9 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tests</artifactId>
-    <name>tests</name>
-    <description>tests</description>
+    <artifactId>aws-iam-roles-anywhere-tests</artifactId>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <description>Tests for all the multiple modules of this project</description>
 
     <dependencies>
         <dependency>
