--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>in.neuw</groupId>
         <artifactId>aws-iam-roles-anywhere</artifactId>
-        <version>1.0.0</version>
+        <version>0.7.0</version>
     </parent>
 
     <artifactId>aws-iam-roles-anywhere-core</artifactId>
@@ -114,7 +114,7 @@
             <version>${bouncy.castle.version}</version>
         </dependency>
         <dependency>
-            <groupId>tools.jackson.core</groupId>
+            <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
