--- a/core/pom.xml
+++ b/core/pom.xml
@@ -92,6 +92,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <version>1.3.16</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
