--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>in.neuw</groupId>
         <artifactId>aws-iam-roles-anywhere</artifactId>
-        <version>0.7.0</version>
+        <version>0.7.0-SNAPSHOT</version>
     </parent>
     <artifactId>aws-iam-roles-anywhere-starter</artifactId>
     <packaging>jar</packaging>
@@ -91,7 +91,7 @@
             <plugin>
                 <groupId>org.sonatype.central</groupId>
                 <artifactId>central-publishing-maven-plugin</artifactId>
-                <version>0.7.0</version>
+                <version>0.9.0</version>
                 <extensions>true</extensions>
                 <configuration>
                     <publishingServerId>central</publishingServerId>
