--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>in.neuw</groupId>
         <artifactId>aws-iam-roles-anywhere</artifactId>
-        <version>0.7.8</version>
+        <version>0.7.9-SNAPSHOT</version>
     </parent>
 
     <artifactId>aws-iam-roles-anywhere-core</artifactId>
@@ -19,7 +19,7 @@
         <java.version>8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <bouncy.castle.version>1.82</bouncy.castle.version>
+        <bouncy.castle.version>1.83</bouncy.castle.version>
     </properties>
 
     <licenses>
