--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>in.neuw</groupId>
     <artifactId>aws-iam-roles-anywhere</artifactId>
-    <version>0.7.8</version>
+    <version>0.7.9-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -39,11 +39,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aws-sdk.version>2.40.4</aws-sdk.version>
-        <spring-boot.version>3.5.8</spring-boot.version>
+        <aws-sdk.version>2.40.12</aws-sdk.version>
+        <spring-boot.version>3.5.9</spring-boot.version>
         <java.version>17</java.version>
         <parent.version>${project.version}</parent.version>
-        <jackson-bom.version>2.19.0</jackson-bom.version>
+        <jackson-bom.version>2.19.4</jackson-bom.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <jacoco.version>0.8.10</jacoco.version>
         <maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
