--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>in.neuw</groupId>
     <artifactId>aws-iam-roles-anywhere</artifactId>
-    <version>0.7.9-SNAPSHOT</version>
+    <version>0.7.9</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
