--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>in.neuw</groupId>
     <artifactId>aws-iam-roles-anywhere</artifactId>
-    <version>0.7.9</version>
+    <version>0.7.10-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -39,8 +39,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <aws-sdk.version>2.40.12</aws-sdk.version>
-        <spring-boot.version>3.5.9</spring-boot.version>
+        <aws-sdk.version>2.41.14</aws-sdk.version>
+        <spring-boot.version>3.5.10</spring-boot.version>
         <java.version>17</java.version>
         <parent.version>${project.version}</parent.version>
         <jackson-bom.version>2.19.4</jackson-bom.version>
